[workspace]
resolver = "2"
members = [
    'api',
    'cli',
    'lib',
    'lib-interface',
    'rpc',
    'rpc-client',
    'program',
    'program-macro',
]

[workspace.dependencies]
solana-clap-utils = "=1.18.15"
solana-cli = "=1.18.15"
solana-cli-config = "=1.18.15"
solana-client = "=1.18.15"
solana-account-decoder = "=1.18.15"
solana-program = { version = "=1.18.15", default-features = false }
solana-sdk = "=1.18.15"
solana-program-runtime = "=1.18.15"
solana-runtime = { version = "=1.18.15", features = ["dev-context-only-utils"] }
solana-accounts-db = "=1.18.15"

[profile.test]
debug = true
