[workspace]
resolver = "2"
members = [
    'api',
    'cli',
    'lib',
    'lib-interface',
    'rpc',
    'rpc-client',
    'program',
    'program-macro',
]

[workspace.dependencies]
solana-clap-utils = "=1.18.17"
solana-cli = "=1.18.17"
solana-cli-config = "=1.18.17"
solana-client = "=1.18.17"
solana-account-decoder = "=1.18.17"
solana-program = { version = "=1.18.17", default-features = false }
solana-sdk = "=1.18.17"
solana-program-runtime = "=1.18.17"
solana-runtime = { version = "=1.18.17", features = ["dev-context-only-utils"] }
solana-accounts-db = "=1.18.17"

[profile.test]
debug = true
