[package]
name = "neon-cli"
version = "0.12.0-dev"
authors = ["NeonLabs Maintainers <maintainers@neonlabs.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = "0.4"
thiserror = "1.0"
bincode = "1.3.1"
clap = "2.33.3"
evm-loader = { path = "../program", default_features = false }
evm = { path = "../rust-evm", version = "0.18.0", default_features = false }
solana-sdk = { git = "https://github.com/neonlabsorg/solana", branch = "NDEV-670_eip_198_big_mod_exp", default_features = false }
solana-client = { git = "https://github.com/neonlabsorg/solana", branch = "NDEV-670_eip_198_big_mod_exp", default_features = false }
solana-clap-utils = { git = "https://github.com/neonlabsorg/solana", branch = "NDEV-670_eip_198_big_mod_exp", default_features = false }
solana-cli-config = { git = "https://github.com/neonlabsorg/solana", branch = "NDEV-670_eip_198_big_mod_exp", default_features = false }
solana-cli = { git = "https://github.com/neonlabsorg/solana", branch = "NDEV-670_eip_198_big_mod_exp", default_features = false }
solana-cli-output = { git = "https://github.com/neonlabsorg/solana", branch = "NDEV-670_eip_198_big_mod_exp", default_features = false }
solana-transaction-status = { git = "https://github.com/neonlabsorg/solana", branch = "NDEV-670_eip_198_big_mod_exp", default_features = false }
spl-token = { git = "https://github.com/neonlabsorg/solana-program-library", branch = "NDEV-670_eip_198_big_mod_exp", default_features = false, features = ["no-entrypoint"] }
spl-associated-token-account = { git = "https://github.com/neonlabsorg/solana-program-library", branch = "NDEV-670_eip_198_big_mod_exp", default_features = false, features = ["no-entrypoint"] }
bs58 = "0.4.0"
hex = "0.4.2"
sha3 = "0.10"
arrayref = "0.3.6"
serde = "1.0.144"
serde_json = "1.0.85"
getrandom = { version = "0.1.16", default_features = false, features = ["dummy"] }
libsecp256k1 = { version = "0.5.0", default-features = false, features = ["static-context", "hmac"] }
log = "0.4.17"
fern = "0.6"
rlp = "0.5"
rand = "0.8"
ethereum-types = "0.11.0"
base64 = { version = "0.13.0" }
goblin = { version = "0.4.2" }
